# isogcn-iclr2021

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  pyproject.toml
data/heat_nl_tensor/preprocessed/: grad_stats.yml  preprocessors.pkl
inputs/differential/: data.yml
inputs/differential/grad2hessian/: cluster_gcn_adj2.yml  cluster_gcn_adj2_w_node.yml  cluster_gcn_adj5.yml  cluster_gcn_adj5_w_node.yml  gcn_adj2.yml  gcn_adj2_w_node.yml  gcn_adj5.yml  gcn_adj5_w_node.yml  gcnii_adj2.yml  gin_adj2.yml  (+12 more)
inputs/heat_nl_tensor/: cluster_gcn_adj2.yml  cluster_gcn_adj2_w_node.yml  cluster_gcn_adj5.yml  cluster_gcn_adj5_w_node.yml.yml  data.yml  data_nl_tensor_1.yml  data_nl_tensor_2.yml  gcn_adj2.yml  gcn_adj2_w_node.yml  gcn_adj5.yml  gcn_adj5_w_node.yml  gcnii_adj2.yml  gcnii_adj2_w_node.yml  gcnii_adj5.yml  gcnii_adj5_w_node.yml  gin_adj2.yml  gin_adj2_w_node.yml  gin_adj5.yml  gin_adj5_w_node.yml  isogcn_adj2.yml  isogcn_adj5.yml  sgcn_adj2.yml  sgcn_adj2_w_node.yml  sgcn_adj5.yml  sgcn_adj5_w_node.yml
scripts/: evaluate.sh  evaluate_20200504.sh  infer.sh  model_directories.txt  run_fistrs.sh  study_1step.sh  test_evaluate.sh
src/: calculate_scale_genam.py  compare_fistrs.py  convert_raw_data.py  generate_data.py  generate_grid_dataset.py  infer.py  infer_raw.py  optimize.py  preprocess_interim_data.py  preprocess_raw_data_with_preprocessors.py  run_fistr.sh  run_fistrs.sh  run_thermal.sh  run_thermals.sh  train.py
tests/: evaluate_optimization.sh  generate_rotated_data.py  rewrite_input_yml.sh  run_fistr.sh  test_convert_raw_data.py  validate_isogcn.py
(+70 files in other folders)
